# Nikaia

./: .aider.conf.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  check_rustc.rs  findthesource.md  hallo.nika  hello_world.rs  manifesto.md  rust-toolchain.toml  specification.md  temp_output.json
.github/: nikaia_experiment.yml
.github/workflows/: nikaia_experiment.yml
crates/bridge-ir/: Cargo.toml
crates/bridge-ir/src/: lib.rs
crates/bridge-orchestrator/: Cargo.toml
crates/bridge-orchestrator/src/: lib.rs
crates/nikaia/: Cargo.toml
crates/nikaia/src/: main.rs
crates/nikaia/src/ast/: mod.rs
crates/nikaia/src/interpreter/: mod.rs
crates/nikaia/src/parser/: mod.rs
crates/rustc-executor/: Cargo.toml
crates/rustc-executor/src/: ast.rs  lib.rs
docs/: project_status_and_roadmap.md  technical_notes.md  toolchain_architecture.md
docs/specification/: 10-nikaia-light.md  20-nikaia-advance.md  30-nikaia-tooling.md
docs/specification/adr/: adr-001.md  adr-002.md  adr-003.md  adr-004.md
docs/specification/rfc/: 0.0.6.md
docs/winnow-grammar/: feature-request.md  findings.md
scripts/: pre-commit.sh
src/: ast.rs  interpreter.rs  lib.rs  main.rs  meta_ast.rs  parser.g  parser.rs
src/boostrap/: resolver.rs
src/gramma/: Core.gramma
tests/: hello_world.rs
winnow-grammar/: feature-request.md
