[package]
name = "nikaia_driver"
version = "0.0.1"
edition = "2024"

[dependencies]
libc = "0.2"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
winnow-grammar = { git = "https://github.com/keywan-ghadami/winnow-grammar", branch = "main" , version = "0.1.0"}
winnow = "0.6"
