[package]
name = "rustc-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge-ir = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []

# This crate links against the rustc compiler internals
[package.metadata.rust-analyzer]
rustc_private = true
